<?xml version="1.0"?>
<package format="2">
  <name>car_model</name>
  <version>0.0.0</version>
  <description>The car_model package</description>

  <maintainer email="whstms1234@todo.todo">whstms1234</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>urdf</build_export_depend>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>sensor_msg</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
  </export>
</package>
